# Population-genetics-heatmap

./: .gitignore  README.md  acient.ipynb  acient2.ipynb  draft_folium.py  draft_matplot.py  mainscript.py  modern.py  plot.py  pyproject.toml  test.html  test.ipynb
Dataset/: Vikings_aDNA.xlsx
Dataset/ModernSamples/: GeneticDistances.xlsx
Envs/: pyproject.toml
Scripts/: acient2.ipynb  animation.py  app.py  draft_matplot.py  immortal.py  interpolation.py  linear_migration.py  mainscript.py  modern.py  moving.py  multimap.py  plot.py  site_turnover.py
