[project]
name = "population-genetics-heatmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25.0",
    "fastexcel>=0.19.0",
    "folium>=0.20.0",
    "geodatasets>=2026.1.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "polars>=1.39.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
