[project]
name = "population-genetics-heatmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair==4.0",
    "cartopy>=0.25.0",
    "fastexcel>=0.19.0",
    "geodatasets>=2026.1.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "scipy>=1.17.1",
    "streamlit>=1.30.0",
]
[tool.ruff.lint]
select = ["E", "F", "B", "UP", "I", "SIM"]
[tool.ruff]
line-length = 200
